--- a/IMP.html
+++ b/IMP.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <head>
-<a class="mg" href="invenTarioPrue.html">Atras</a>
+<a class="mg" href="Index.html">Atras</a>
 	 
       <pre><p class="lilo"> Encuentra aqui...</p>
 	  <h1 class="stich">IMPORTANCIA DE LOS EQUIPOS EN URGENCIAS</h1></pre>
