--- a/mante.html
+++ b/mante.html
@@ -8,7 +8,7 @@
 </head>
 
      <!--BOTON ATRAS--->
-	 <a class="mg" href="invenTarioPrue.html">Atras</a>
+	 <a class="mg" href="Index.html">Atras</a>
 	 
       <pre><p class="lilo">Equipos Medicos</p>
 	  <h1 class="stich">Inventario</h1></pre>
