--- a/miento.html
+++ b/miento.html
@@ -4,7 +4,7 @@
 </head>
 
      <!--BOTON ATRAS--->
-	 <a class="mg" href="invenTarioPrue.html">Atras</a>
+	 <a class="mg" href="Index.html">Atras</a>
 	 
       <pre><p class="tik">Mantenimiento Equipos Medicos</p>
 	  <h1 class="tok">Inventario</h1></pre>
